Resolves: tdf#125761 there is no page called 'labelTP_BACKGROUND'

Change-Id: Ia6558039da010b0f6d8385e9791c0abc2ef75eba